--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -140,7 +140,7 @@ main {
     opacity: .2;
     position: absolute;
     top: 235px;
-    left: 173px;
+    left: 153px;
     z-index: 15;
 }
 
